snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha1
215c065da120a8697dd7ffddd529b1c8d50d2942